objects/Brand_Form_Picklist__mdt.object
<CustomObject>
    <description>This custom setting is used to store Picklist Values for fields corresponding to each brand. Also this contains Product Category and Sub Category for each Brand.</description>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is used to match the Case Source Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values_JSON__c</fullName>
        <label>Picklist Values JSON</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <description>DEPRECATED - DO NOT USE</description>
        <inlineHelpText>DEPRECATED - DO NOT USE</inlineHelpText>
        <label>Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Brand Form Picklist</label>
    <listViews>
        <fullName>Calvin_Klein</fullName>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>Calvin</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>Calvin Klein</label>
    </listViews>
    <listViews>
        <fullName>Calvin_Klein_CA</fullName>
        <columns>MasterLabel</columns>
        <columns>Brand_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Sequence__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>contains</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>Calvin Klein CA</label>
    </listViews>
    <listViews>
        <fullName>Calvin_Klein_US</fullName>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>Calvin Klein US</label>
    </listViews>
    <listViews>
        <fullName>Izod</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>Izod</value>
        </filters>
        <label>Izod</label>
    </listViews>
    <listViews>
        <fullName>LightningForm</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>LightningForm</label>
    </listViews>
    <listViews>
        <fullName>Olga</fullName>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>Olga</value>
        </filters>
        <label>Olga</label>
    </listViews>
    <listViews>
        <fullName>Show_ALL</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>Show ALL</label>
    </listViews>
    <listViews>
        <fullName>Speedo</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>Spe</value>
        </filters>
        <label>Speedo</label>
    </listViews>
    <listViews>
        <fullName>StyleB</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>Style</value>
        </filters>
        <label>StyleB</label>
    </listViews>
    <listViews>
        <fullName>Tommy</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tommy</label>
    </listViews>
    <listViews>
        <fullName>True_Co</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>True</value>
        </filters>
        <label>True&amp;Co</label>
    </listViews>
    <listViews>
        <fullName>Van_Heusen</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>van</value>
        </filters>
        <label>Van Heusen</label>
    </listViews>
    <listViews>
        <fullName>Warners</fullName>
        <columns>Brand_Name__c</columns>
        <columns>Sequence__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>War</value>
        </filters>
        <label>Warners</label>
    </listViews>
    <listViews>
        <fullName>styleBureau</fullName>
        <columns>MasterLabel</columns>
        <columns>Sequence__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>style</value>
        </filters>
        <label>styleBureau</label>
    </listViews>
    <pluralLabel>Brand Form Picklists</pluralLabel>
    <validationRules>
        <fullName>Picklist_Values_Required</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Picklist_Values_JSON__c ) = 0</errorConditionFormula>
        <errorDisplayField>Picklist_Values_JSON__c</errorDisplayField>
        <errorMessage>You must enter a value.</errorMessage>
    </validationRules>
</CustomObject>